--- a/MODUL1 ARDDHANA/profile.html
+++ b/MODUL1 ARDDHANA/profile.html
@@ -2,9 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Profile</title>
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/custom.css" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a class="navbar-brand" href="#"><img alt="" id="logo-nav" src="assets/img/logo-ead.png"></a>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Home </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Product</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="#">Profile</a>
+        </li>
+    </ul>
+</nav>
+
+<section class="container content">
+    <div class="row align-items-center">
+        <div class="card">
+            <div class="card-header text-center">
+                <img alt="" id="logo-card" src="assets/img/logo-ead.png">
+            </div>
+            <div class="card-body p-5">
+                <p>
+                    EAD Store merupakan toko elektronik yang menjual barang sebagai berikut:
+                </p>
+                <ol type="1">
+                    <li>Komputer</li>
+                    <li>Keyboard</li>
+                    <li>Mouse</li>
+                </ol>
+
+                <p>
+                    Merk yang tersedia di EAD Store antara lain:
+                </p>
+                <ul type="bullet">
+                    <li>HP</li>
+                    <li>ASUS</li>
+                    <li>Logitect</li>
+                    <li>Dell</li>
+                    <li>Lenovo</li>
+                    <li>Apple</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
