Product Progress Update

--- a/MODUL1 ARDDHANA/product.html
+++ b/MODUL1 ARDDHANA/product.html
@@ -2,9 +2,94 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Product</title>
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/custom.css" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a class="navbar-brand" href="home.html"><img alt="" id="logo-nav" src="assets/img/logo-ead.png"></a>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="home.html">Home </a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link" href="profile.html">Profile</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="product.html">Product</a>
+        </li>
+    </ul>
+</nav>
+
+<section class="container content">
+    <div class="daftarBarang">
+        <h3 class="text-center mb-5">Daftar Barang</h3>
+        <table class="table table-striped table-bordered text-center" width="100%">
+            <tr>
+                <th rowspan="2">Ketersediaan Barang</th>
+                <th rowspan="2">Nama Barang</th>
+                <th colspan="3">Detail Barang</th>
+            </tr>
+            <tr>
+                <th>Merk</th>
+                <th>Jenis</th>
+                <th>Harga</th>
+            </tr>
+            <tr>
+                <td rowspan="5">Ready Stock</td>
+                <td>All-in-One 24-f0051d [3/V73AA]</td>
+                <td>HP</td>
+                <td>Komputer</td>
+                <td>Rp11.358.000</td>
+            </tr>
+            <tr>
+                <td>All-in-One V222UAK-BA341T [90PT0261-M00240]</td>
+                <td>Asus</td>
+                <td>Komputer</td>
+                <td>Rp8.099.000</td>
+            </tr>
+            <tr>
+                <td>Bluetooth Multi-Device Keyboard K480 - Black [920-006380]</td>
+                <td>Logitech</td>
+                <td>Keyboard</td>
+                <td>Rp470.000</td>
+            </tr>
+            <tr>
+                <td>Wireless Keyboard and Mouse KM636 [910-005407]</td>
+                <td>Dell</td>
+                <td>Keyboard</td>
+                <td>Rp399.000</td>
+            </tr>
+            <tr>
+                <td>Wireless Mouse M238 Fan Collection - England [910-005407]</td>
+                <td>Logitech</td>
+                <td>Mouse</td>
+                <td>Rp175.000</td>
+            </tr>
+            <tr>
+                <td rowspan="3">Sold Out</td>
+                <td>All-in-One Idea Center AIO520-22IKL [F0D4005MID]</td>
+                <td>Lenovo</td>
+                <td>Komputer</td>
+                <td>Rp10.850.000</td>
+            </tr>
+            <tr>
+                <td>M590 Multi Device Silent Wireless Mouse [910-005205]</td>
+                <td>Logitech</td>
+                <td>Mouse</td>
+                <td>Rp394.000</td>
+            </tr>
+            <tr>
+                <td>Smart Keyboard iPad Pro 10.5 Inch [MPTl2ZA/A]</td>
+                <td>Apple</td>
+                <td>Keyboard</td>
+                <td>Rp3.000.800</td>
+            </tr>
+        </table>
+    </div>
+</section>
 
 </body>
 </html>
