--- a/MODUL1 ARDDHANA/home.html
+++ b/MODUL1 ARDDHANA/home.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="#"><img alt="" id="logo-nav" src="assets/img/logo-ead.png"></a>
+    <a class="navbar-brand" href="home.html"><img alt="" id="logo-nav" src="assets/img/logo-ead.png"></a>
     <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Home </a>
+            <a class="nav-link" href="home.html">Home </a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Product</a>
+        <li class="nav-item ">
+            <a class="nav-link" href="profile.html">Profile</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
+        <li class="nav-item ">
+            <a class="nav-link" href="product.html">Product</a>
         </li>
     </ul>
 </nav>
