--- a/MODUL1 ARDDHANA/home.html
+++ b/MODUL1 ARDDHANA/home.html
@@ -26,7 +26,7 @@
 <section class="content container">
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 video-container p-5">
-            <iframe frameborder="0" height="50%" src="https://www.youtube.com/embed/AwMeQJ_u73I" width="100%"></iframe>
+            <iframe frameborder="0" style="margin-top: 25%;" height="50%" src="https://www.youtube.com/embed/AwMeQJ_u73I" width="100%"></iframe>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 form-container p-5">
             <h3 class="mb-5" style="text-align: center">Registrasi Data Pelanggan</h3>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-3 col-form-label" for="pembayaran">Pembayaran</label>
-                    <div class="col-sm-9" id="pembayaran">
+                    <div class="col-sm-9 pt-2" id="pembayaran">
                         <input id="pembayarancash" name="pembayaran" type="radio" value="Cash">
                         <label for="pembayarancash">Cash</label>
 
