--- a/MODUL1 ARDDHANA/profile.html
+++ b/MODUL1 ARDDHANA/profile.html
@@ -14,7 +14,7 @@
         <li class="nav-item">
             <a class="nav-link" href="home.html">Home </a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item ">
             <a class="nav-link" href="profile.html">Profile</a>
         </li>
         <li class="nav-item ">
