--- a/MODUL1 ARDDHANA/home.html
+++ b/MODUL1 ARDDHANA/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Home</title>
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/custom.css" rel="stylesheet">
 </head>
 <body>
@@ -56,8 +56,7 @@
                     <div class="col-sm-9 pt-2" id="pembayaran">
                         <input id="pembayarancash" name="pembayaran" type="radio" value="Cash">
                         <label for="pembayarancash">Cash</label>
-
-                        <input id="pembayarancredit" name="pembelian" type="radio" value="Credit">
+                        <input id="pembayarancredit" name="pembayaran" type="radio" value="Credit">
                         <label for="pembayarancredit">Credit</label>
                     </div>
                 </div>
