--- a/MODUL1 ARDDHANA/profile.html
+++ b/MODUL1 ARDDHANA/profile.html
@@ -15,7 +15,7 @@
             <a class="nav-link" href="home.html">Home </a>
         </li>
         <li class="nav-item ">
-            <a class="nav-link" href="profile.html">Profile</a>
+            <a class="nav-link active" href="profile.html">Profile</a>
         </li>
         <li class="nav-item ">
             <a class="nav-link" href="product.html">Product</a>
